--- a/src/main/webapp/client.xhtml
+++ b/src/main/webapp/client.xhtml
@@ -11,7 +11,7 @@
 </h:head>
 <h:body>
 	<h:form>
-	    numClient: <h:inputText  value="#{clientComptesMBean.numClient}" /><br/>
+	    numClient: <h:inputText  value="#{clientComptesMBean.numClient}" />(ex: 3 ou 4)<br/>
 	    <h:commandButton value="login" 
 	                     action="#{clientComptesMBean.login}" />
 	</h:form>
